--- a/pages/_gl.html
+++ b/pages/_gl.html
@@ -16,8 +16,9 @@
       <p class="fs-64 ff-noto-sans fw-bolder">Heading 64px Black</p>
       <p class="fs-48 ff-noto-sans fw-bolder">Heading 48px Black</p>
       <p class="fs-48 ff-noto-sans fw-bold">Heading 48px Bold</p>
+      <p class="fs-32 ff-noto-sans fw-bold">Heading 32px Bold</p>
       <p class="fs-20 ff-noto-sans fw-bold">Body 20px Bold</p>
-      <p class="fs-20 ff-noto-sans fw-medium">Heading 20px Medium</p>
+      <p class="fs-32 ff-noto-sans fw-medium">Heading 20px Medium</p>
       <p class="fs-16 ff-noto-sans fw-bold">Body 16px Bold</p>
       <p class="fs-16 ff-noto-sans fw-medium">Body 16px Medium</p>
       <hr>
@@ -36,7 +37,7 @@
         <hr class="border border-1 border-white">
       </div>
     </div>
-    <div class="container">
+    <div class="container mb-60">
       <div class="row">
         <div class="col">
           <ul class="list-unstyled">
@@ -45,6 +46,24 @@
             <li class="py-12">789</li>
           </ul>
         </div>
+      </div>
+    </div>
+
+    <div class="container text-white">
+      <div class="bg-gradient-x mb-30" style="height: 80px;">
+        bg-gradient-x
+      </div>
+      <div class="bg-gradient-y mb-30" style="height: 80px;">
+        bg-gradient-y
+      </div>
+      <div class="bg-gradient-c mb-30" style="height: 800px;">
+        bg-gradient-c
+      </div>
+      <!-- <div class="bg-radial-gradient mb-30" style="height: 300px;">
+        bg-radial-gradient
+      </div> -->
+      <div class="mb-30" style="height: 800px; background-image: radial-gradient(50% 50.00% at 50% 50.00%, #28085C 0%, #000 100%);">
+        bg-color
       </div>
     </div>
 
