--- a/_gl.html
+++ b/_gl.html
@@ -5,15 +5,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gulideline︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-52467d62.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-d86addea.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-202d4693.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-303bca88.css">
   </head>
   <body>
-    <div class="py-32 bg-light">
-  <div class="container ">
-    <p class="">header</p>
-  </div>
+    <div class="position-fixed w-100 z-3">
+  <div class="navbar-border position-absolute bg-white start-0 end-0 bottom-0"></div>
+  <nav class="navbar navbar-expand-lg py-12 py-md-20 bg-primary" data-bs-theme="dark">
+    <div class="container d-flex justify-content-between">
+      <!-- LOGO -->
+      <h1 class="lh-0"><a class="d-block ff-shrikhand fs-24 fs-md-32 text-white font-italic p-0" href="index.html">ALPHABOX+</a></h1>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navContent" aria-controls="navContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="material-symbols-outlined fs-44 fs-md-32 fw-bold text-white">menu</span>
+      </button>
+      <!-- 下拉選單 -->
+      <div class="navbar-dropdown position-md-static position-absolute start-0 end-0 flex-lg-grow-1">
+        <div class="collapse navbar-collapse navbar-bg" id="navContent">
+          <ul class="navbar-nav mx-lg-auto me-auto mb-8 mb-lg-0 gap-8 pt-16 pt-lg-0 gap-lg-16">
+            <li class="nav-item">
+              <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white text-center" href="#">關於我們</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white text-center" href="#">最新消息</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white text-center" href="#">FAQ</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link text-white text-center" href="#">聯絡我們</a>
+            </li>
+          </ul>
+
+          <ul class="navbar-nav gap-8 pb-32 pb-lg-0 gap-lg-16">
+            <li class="nav-item">
+              <a class="nav-link text-white text-center" href="#">註冊</a>
+            </li>
+            <li class="nav-item me-lg-16">
+              <a class="nav-link text-white text-center" href="#">登入</a>
+            </li>
+            <li class="nav-item d-flex justify-content-center">
+              <a class="nav-link btn rounded-1 text-black text-center bg-white py-8 px-12" href="#">
+                <i class="material-symbols-outlined align-bottom me-1">point_scan</i>
+                訂閱
+              </a>
+            </li>
+          </ul>
+
+        </div>
+      </div>
+      <!-- 漢堡按鈕 -->
+      <!-- <button class="navbar-toggler border-0 d-flex d-lg-none p-2" type="button" data-bs-toggle="collapse" data-bs-target="#navContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="icon-custom">
+          <span class="icon-line"></span>
+          <span class="icon-line"></span>
+          <span class="icon-line"></span>
+        </div>
+      </button> -->
+    </div>
+  </nav>
 </div>
+
     <div class="container mt-32 mb-64">
       <h3>Typography</h3>
       <hr>
@@ -21,8 +75,9 @@
       <p class="fs-64 ff-noto-sans fw-bolder">Heading 64px Black</p>
       <p class="fs-48 ff-noto-sans fw-bolder">Heading 48px Black</p>
       <p class="fs-48 ff-noto-sans fw-bold">Heading 48px Bold</p>
+      <p class="fs-32 ff-noto-sans fw-bold">Heading 32px Bold</p>
       <p class="fs-20 ff-noto-sans fw-bold">Body 20px Bold</p>
-      <p class="fs-20 ff-noto-sans fw-medium">Heading 20px Medium</p>
+      <p class="fs-32 ff-noto-sans fw-medium">Heading 20px Medium</p>
       <p class="fs-16 ff-noto-sans fw-bold">Body 16px Bold</p>
       <p class="fs-16 ff-noto-sans fw-medium">Body 16px Medium</p>
       <hr>
@@ -41,7 +96,7 @@
         <hr class="border border-1 border-white">
       </div>
     </div>
-    <div class="container">
+    <div class="container mb-60">
       <div class="row">
         <div class="col">
           <ul class="list-unstyled">
@@ -53,9 +108,44 @@
       </div>
     </div>
 
-    <footer class="py-60 bg-black">
-  <div class="container text-white">
-    footer
+    <div class="container text-white">
+      <div class="bg-gradient-x mb-30" style="height: 80px;">
+        bg-gradient-x
+      </div>
+      <div class="bg-gradient-y mb-30" style="height: 80px;">
+        bg-gradient-y
+      </div>
+      <div class="bg-gradient-c mb-30" style="height: 800px;">
+        bg-gradient-c
+      </div>
+      <!-- <div class="bg-radial-gradient mb-30" style="height: 300px;">
+        bg-radial-gradient
+      </div> -->
+      <div class="mb-30" style="height: 800px; background-image: radial-gradient(50% 50.00% at 50% 50.00%, #28085C 0%, #000 100%);">
+        bg-color
+      </div>
+    </div>
+
+    <footer class="py-40 py-lg-48 bg-white">
+  <div class="container">
+    <div class="row px-40 px-lg-0">
+      <div class="col-12 col-lg-5">
+        <a class="d-block ff-shrikhand fs-32 text-black font-italic p-0" href="index.html">ALPHABOX+</a>
+        <span class="fw-bold d-none d-lg-block">Copyright © 2023 Hexschool.</span>
+      </div>
+      <div class="col-12 col-lg-2 mb-8 mb-lg-0">
+        <img src="/2023week8/assets/emergency_b-28ccaa1b.svg" alt="emergency_b">
+      </div>
+      <div class="col-12 col-lg-5 text-end align-self-center">
+        <ul class="list-unstyled d-flex flex-column justify-content-end flex-lg-row align-items-start ">
+          <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="#">關於我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">產品資訊</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">聯絡我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black ps-lg-12" href="#">隱私政策</a></li>
+        </ul>
+      </div>
+      <span class="fw-bold d-block d-lg-none">Copyright © 2023 Hexschool.</span>
+    </div>
   </div>
 </footer>
     
