--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>首頁︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-202d4693.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-303bca88.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-0483fc61.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-651d6d18.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -68,9 +68,6 @@
   </nav>
 </div>
 
-    <!-- <div class="bg-black" style="position: static; height: 76px;">
-    </div> -->
-
     <!-- main start -->
     <div class="pt-80" style="position: static; background: url('/2023week8/assets/home_background-8e027078.png') no-repeat center center /cover;">
       <div class="container-main pt-28 pt-lg-56">
@@ -87,23 +84,23 @@
           </div>
         </div>
         <div class="row justify-content-center mb-24 mb-md-32">
-          <div class="col text-white text-center">
+          <div class="col text-white text-center animate__animated animate__fadeInDown animate__delay-0.6s">
             <h2 class="ff-shrikhand fs-20 letter-spacing-26 fs-md-32 letter-spacing-lg-80">ALPHABOX+</h2>
             <p class="fw-bold letter-spacing-5">擁抱未來科技，專屬您的3D立體投影陪伴機器人</p>
           </div>
         </div>
-        <ul class="row">
+        <ul class="row list-unstyled">
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img mt-lg-n96">
+            <div class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1000" data-aos-once="true">
               <picture>
                 <source srcset="/2023week8/assets/diane_square1-9f0571f9.png " media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/2023week8/assets/diane-2a2ea242.png" alt="Diane">
               </picture>
-              <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-lg-n80">Diane</h3>
+              <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Diane</h3>
             </div>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img">
+            <div class="main-img" data-aos="flip-left" data-aos-delay="1100" data-aos-once="true">
               <picture>
                 <source srcset="/2023week8/assets/felix_square1-48e53108.png " media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/2023week8/assets/felix-edc6ba69.png" alt="Felix">
@@ -112,7 +109,7 @@
             </div>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img">
+            <div class="main-img" data-aos="flip-left" data-aos-delay="1200" data-aos-once="true">
               <picture>
                 <source srcset="/2023week8/assets/karina_square1-3af8d52b.png " media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/2023week8/assets/karina-925992ef.png" alt="Karina">
@@ -121,12 +118,12 @@
             </div>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-32 mb-lg-40">
-            <div class="main-img mt-lg-n96">
+            <div class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1300" data-aos-once="true">
               <picture>
                 <source srcset="/2023week8/assets/vito_square1-4497c642.png " media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/2023week8/assets/vito-f02791d7.png" alt="Vito">
               </picture>
-              <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-lg-n80">Vito</h3>
+              <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Vito</h3>
             </div>
           </li>
         </ul>
@@ -135,7 +132,7 @@
     <!-- main end -->
 
     <!-- 什麼是ALPHABOX+ 開始 -->
-    <div class="banner-img pb-60 pb-lg-80" style="background: url(/2023week8/assets/carousel_background-51692b60.png) left /contain no-repeat,radial-gradient(50% 50% at 50% 50%, #300871 0%, #000 100%);padding-top: 144px;">
+    <div class="banner-img pb-60 pb-lg-80">
       <div class="container-main">
         <div class="bg-gradient-x2r mb-8" style="height: 40px;"></div>
         <div class="text-white">
@@ -171,7 +168,7 @@
                   <div class="alphabox d-flex flex-column align-items-start align-items-md-end justify-content-end justify-content-md-center">
                     <div class="alphabox-intro">
                       <h3 class="lh-base text-md-end mb-3">
-                        <span class="ff-shrikhand fs-96">02</span><br>
+                        <span class="ff-shrikhand fs-64 fs-lg-96">02</span><br>
                         <span class="alphabox-title">立體投影技術</span>
                       </h3>
                       <p class="mb-0">透過高科技立體投影技術，讓您感受真實的科技世界。</p>
@@ -182,7 +179,7 @@
                   <div class="alphabox d-flex flex-column align-items-start align-items-md-end justify-content-end justify-content-md-center">
                     <div class="alphabox-intro">
                       <h3 class="lh-base text-md-end mb-3">
-                        <span class="ff-shrikhand fs-96">03</span><br>
+                        <span class="ff-shrikhand fs-64 fs-lg-96">03</span><br>
                         <span class="alphabox-title">立體投影技術</span>
                       </h3>
                       <p class="mb-0">透過高科技立體投影技術，讓您感受真實的科技世界。</p>
