--- a/test-1.html
+++ b/test-1.html
@@ -65,8 +65,8 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
-  <script type="module" crossorigin src="/2023week8/assets/main-202d4693.js"></script>
-  <link rel="stylesheet" href="/2023week8/assets/main-303bca88.css">
+  <script type="module" crossorigin src="/2023week8/assets/main-0483fc61.js"></script>
+  <link rel="stylesheet" href="/2023week8/assets/main-651d6d18.css">
 </head>
 <body style="background-color: #333;">
 
@@ -130,7 +130,7 @@
 </div>
 
   <div class="text-whitep" style="background: linear-gradient(180deg, #7000FF 0%, #11002D 100%); padding-top: 120px;">
-    <div class="container test" style="">
+    <div class="container test" style=""  data-aos="flip-lef" data-aos-delay="300">
       <div class="row">
         <div class="col"><img src="/2023week8/assets/diane-2a2ea242.png" alt=""></div>
         <div class="col"><img src="/2023week8/assets/diane-2a2ea242.png" alt=""></div>
