update index again

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,9 +9,6 @@
   <body>
     <%- include('./layout/header'); -%>
 
-    <!-- <div class="bg-black" style="position: static; height: 76px;">
-    </div> -->
-
     <!-- main start -->
     <div class="pt-80" style="position: static; background: url('/assets/images/home_background.png') no-repeat center center /cover;">
       <div class="container-main pt-28 pt-lg-56">
@@ -28,23 +25,23 @@
           </div>
         </div>
         <div class="row justify-content-center mb-24 mb-md-32">
-          <div class="col text-white text-center">
+          <div class="col text-white text-center animate__animated animate__fadeInDown animate__delay-0.6s">
             <h2 class="ff-shrikhand fs-20 letter-spacing-26 fs-md-32 letter-spacing-lg-80">ALPHABOX+</h2>
             <p class="fw-bold letter-spacing-5">擁抱未來科技，專屬您的3D立體投影陪伴機器人</p>
           </div>
         </div>
-        <ul class="row">
+        <ul class="row list-unstyled">
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img mt-lg-n96">
+            <div class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1000" data-aos-once="true">
               <picture>
                 <source srcset="/assets/images/diane_square1.png" media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/assets/images/diane.png" alt="Diane">
               </picture>
-              <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-lg-n80">Diane</h3>
+              <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Diane</h3>
             </div>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img">
+            <div class="main-img" data-aos="flip-left" data-aos-delay="1100" data-aos-once="true">
               <picture>
                 <source srcset="/assets/images/felix_square1.png" media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/assets/images/felix.png" alt="Felix">
@@ -53,7 +50,7 @@
             </div>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img">
+            <div class="main-img" data-aos="flip-left" data-aos-delay="1200" data-aos-once="true">
               <picture>
                 <source srcset="/assets/images/karina_square1.png" media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/assets/images/karina.png" alt="Karina">
@@ -62,12 +59,12 @@
             </div>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-32 mb-lg-40">
-            <div class="main-img mt-lg-n96">
+            <div class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1300" data-aos-once="true">
               <picture>
                 <source srcset="/assets/images/vito_square1.png" media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/assets/images/vito.png" alt="Vito">
               </picture>
-              <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-lg-n80">Vito</h3>
+              <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Vito</h3>
             </div>
           </li>
         </ul>
@@ -76,7 +73,7 @@
     <!-- main end -->
 
     <!-- 什麼是ALPHABOX+ 開始 -->
-    <div class="banner-img pb-60 pb-lg-80" style="background: url(/assets/images/carousel_background.png) left /contain no-repeat,radial-gradient(50% 50% at 50% 50%, #300871 0%, #000 100%);padding-top: 144px;">
+    <div class="banner-img pb-60 pb-lg-80">
       <div class="container-main">
         <div class="bg-gradient-x2r mb-8" style="height: 40px;"></div>
         <div class="text-white">
@@ -112,7 +109,7 @@
                   <div class="alphabox d-flex flex-column align-items-start align-items-md-end justify-content-end justify-content-md-center">
                     <div class="alphabox-intro">
                       <h3 class="lh-base text-md-end mb-3">
-                        <span class="ff-shrikhand fs-96">02</span><br>
+                        <span class="ff-shrikhand fs-64 fs-lg-96">02</span><br>
                         <span class="alphabox-title">立體投影技術</span>
                       </h3>
                       <p class="mb-0">透過高科技立體投影技術，讓您感受真實的科技世界。</p>
@@ -123,7 +120,7 @@
                   <div class="alphabox d-flex flex-column align-items-start align-items-md-end justify-content-end justify-content-md-center">
                     <div class="alphabox-intro">
                       <h3 class="lh-base text-md-end mb-3">
-                        <span class="ff-shrikhand fs-96">03</span><br>
+                        <span class="ff-shrikhand fs-64 fs-lg-96">03</span><br>
                         <span class="alphabox-title">立體投影技術</span>
                       </h3>
                       <p class="mb-0">透過高科技立體投影技術，讓您感受真實的科技世界。</p>
