--- a/pages/test-1.html
+++ b/pages/test-1.html
@@ -71,7 +71,7 @@
   <%- include('./layout/header'); -%>
 
   <div class="text-whitep" style="background: linear-gradient(180deg, #7000FF 0%, #11002D 100%); padding-top: 120px;">
-    <div class="container test" style="">
+    <div class="container test" style=""  data-aos="flip-lef" data-aos-delay="300">
       <div class="row">
         <div class="col"><img src="/assets/images/diane.png" alt=""></div>
         <div class="col"><img src="/assets/images/diane.png" alt=""></div>
