--- a/_gl.html
+++ b/_gl.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gulideline︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-0483fc61.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-651d6d18.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-cf4b681e.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-d33c84f6.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -26,7 +26,7 @@
               <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">關於我們</a>
+              <a class="nav-link text-white text-center" href="about.html">關於我們</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="#">最新消息</a>
@@ -138,7 +138,7 @@
       </div>
       <div class="col-12 col-lg-5 text-end align-self-center">
         <ul class="list-unstyled d-flex flex-column justify-content-end flex-lg-row align-items-start ">
-          <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="#">關於我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="about.html">關於我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">產品資訊</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">聯絡我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black ps-lg-12" href="#">隱私政策</a></li>
