--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>首頁︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-0483fc61.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-651d6d18.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-cf4b681e.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-d33c84f6.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -26,7 +26,7 @@
               <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">關於我們</a>
+              <a class="nav-link text-white text-center" href="about.html">關於我們</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="#">最新消息</a>
@@ -91,40 +91,40 @@
         </div>
         <ul class="row list-unstyled">
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1000" data-aos-once="true">
+            <a class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1000" data-aos-once="true" href="#">
               <picture>
                 <source srcset="/2023week8/assets/diane_square1-9f0571f9.png " media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/2023week8/assets/diane-2a2ea242.png" alt="Diane">
               </picture>
               <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Diane</h3>
-            </div>
+            </a>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img" data-aos="flip-left" data-aos-delay="1100" data-aos-once="true">
+            <a class="main-img" data-aos="flip-left" data-aos-delay="1100" data-aos-once="true" href="#">
               <picture>
                 <source srcset="/2023week8/assets/felix_square1-48e53108.png " media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/2023week8/assets/felix-edc6ba69.png" alt="Felix">
               </picture>
               <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Felix</h3>
-            </div>
+            </a>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img" data-aos="flip-left" data-aos-delay="1200" data-aos-once="true">
+            <a class="main-img" data-aos="flip-left" data-aos-delay="1200" data-aos-once="true" href="#">
               <picture>
                 <source srcset="/2023week8/assets/karina_square1-3af8d52b.png " media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/2023week8/assets/karina-925992ef.png" alt="Karina">
               </picture>
               <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Karina</h3>
-            </div>
+            </a>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-32 mb-lg-40">
-            <div class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1300" data-aos-once="true">
+            <a class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1300" data-aos-once="true" href="#">
               <picture>
                 <source srcset="/2023week8/assets/vito_square1-4497c642.png " media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/2023week8/assets/vito-f02791d7.png" alt="Vito">
               </picture>
               <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Vito</h3>
-            </div>
+            </a>
           </li>
         </ul>
       </div>
@@ -488,7 +488,7 @@
       </div>
       <div class="col-12 col-lg-5 text-end align-self-center">
         <ul class="list-unstyled d-flex flex-column justify-content-end flex-lg-row align-items-start ">
-          <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="#">關於我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="about.html">關於我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">產品資訊</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">聯絡我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black ps-lg-12" href="#">隱私政策</a></li>
