--- a/test-1.html
+++ b/test-1.html
@@ -8,7 +8,7 @@
   
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"/>
 
-  <style>
+  <!-- <style>
     body {
   background-color: #000000;
   font-family: 'Noto Sans TC', sans-serif;
@@ -58,15 +58,15 @@
     content: '';
   }
 }
-</style>
+</style> -->
 
 
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 
-  <script type="module" crossorigin src="/2023week8/assets/main-0483fc61.js"></script>
-  <link rel="stylesheet" href="/2023week8/assets/main-651d6d18.css">
+  <script type="module" crossorigin src="/2023week8/assets/main-cf4b681e.js"></script>
+  <link rel="stylesheet" href="/2023week8/assets/main-d33c84f6.css">
 </head>
 <body style="background-color: #333;">
 
@@ -87,7 +87,7 @@
               <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">關於我們</a>
+              <a class="nav-link text-white text-center" href="about.html">關於我們</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="#">最新消息</a>
@@ -129,8 +129,9 @@
   </nav>
 </div>
 
-  <div class="text-whitep" style="background: linear-gradient(180deg, #7000FF 0%, #11002D 100%); padding-top: 120px;">
-    <div class="container test" style=""  data-aos="flip-lef" data-aos-delay="300">
+  <div class="bg-white pt-80">
+    <div class="container test py-80" style=""  data-aos="flip-lef" data-aos-delay="300">
+      <p class="pb-40">此外，我們還提供完善的售後服務，包括<span class="d-inline-block position-relative text-label text-mark px-8">產品保固</span>、<a href="#" class="position-relative link-danger">技術支援</a>及<a href="#" class="">線上客服</a>協助，確保您在購買與使用過程中得到全面支持。</p>
       <div class="row">
         <div class="col"><img src="/2023week8/assets/diane-2a2ea242.png" alt=""></div>
         <div class="col"><img src="/2023week8/assets/diane-2a2ea242.png" alt=""></div>
@@ -139,15 +140,10 @@
       </div>
     </div>
   </div>
-  <div class="pb-64" style="margin-top: -144px;;background: left /contain no-repeat url(/2023week8/assets/carousel_background-51692b60.png),radial-gradient(50% 50% at 50% 50%, #300871 0%, #000 100%); padding-top: 144px; z-index: -5;">
-    <div class="container test" style="height: 500px;">
-      XXX
-    </div>
-  </div>
 
 
 
-<script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
 <script>
   const swiperAlpha = new Swiper('.sw1', {
     autoplay: {
@@ -165,7 +161,7 @@
       prevEl: '.swiper-button-prev',
     },
   });
-</script>
+</script> -->
 
 </body>
 </html>
