--- a/pages/index.html
+++ b/pages/index.html
@@ -32,40 +32,40 @@
         </div>
         <ul class="row list-unstyled">
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1000" data-aos-once="true">
+            <a class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1000" data-aos-once="true" href="#">
               <picture>
                 <source srcset="/assets/images/diane_square1.png" media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/assets/images/diane.png" alt="Diane">
               </picture>
               <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Diane</h3>
-            </div>
+            </a>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img" data-aos="flip-left" data-aos-delay="1100" data-aos-once="true">
+            <a class="main-img" data-aos="flip-left" data-aos-delay="1100" data-aos-once="true" href="#">
               <picture>
                 <source srcset="/assets/images/felix_square1.png" media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/assets/images/felix.png" alt="Felix">
               </picture>
               <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Felix</h3>
-            </div>
+            </a>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-16">
-            <div class="main-img" data-aos="flip-left" data-aos-delay="1200" data-aos-once="true">
+            <a class="main-img" data-aos="flip-left" data-aos-delay="1200" data-aos-once="true" href="#">
               <picture>
                 <source srcset="/assets/images/karina_square1.png" media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/assets/images/karina.png" alt="Karina">
               </picture>
               <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Karina</h3>
-            </div>
+            </a>
           </li>
           <li class="col-12 col-lg-3 position-relative mb-32 mb-lg-40">
-            <div class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1300" data-aos-once="true">
+            <a class="main-img mt-lg-n96" data-aos="flip-left" data-aos-delay="1300" data-aos-once="true" href="#">
               <picture>
                 <source srcset="/assets/images/vito_square1.png" media="(max-width: 768px)">
                 <img class="w-100 object-fit-cover h-100" src="/assets/images/vito.png" alt="Vito">
               </picture>
               <h3 class="ff-shrikhand fs-32 text-white position-absolute top-0 start-50 translate-middle-x mt-16">Vito</h3>
-            </div>
+            </a>
           </li>
         </ul>
       </div>
