--- a/pages/about.html
+++ b/pages/about.html
@@ -72,7 +72,7 @@
             <p class="">我們提供多款3D立體投影陪伴機器人，涵蓋知識型、娛樂型、生活型和情感型等不同類別，以滿足您的各種需求。每款產品都經過精心設計，具備高度智能化、多功能和人性化操作等特點，讓您在日常生活中獲得更便利的陪伴體驗。</p>
           </div>
           <div class="col-12 col-lg-4 mb-24 mb-lg-80">
-            <p class="">此外，我們還提供完善的售後服務，包括<span class="d-inline-block position-relative text-label text-mark px-8">產品保固</span>、<a href="#" class="">技術支援</a>及<a href="#" class="">線上客服</a>協助，確保您在購買與使用過程中得到全面支持。</p>
+            <p class="">此外，我們還提供完善的售後服務，包括<a href="#" class="link-mark px-8">產品保固</a>、<a href="#" class="link-mark px-8">技術支援</a>及<a href="#" class="link-mark px-8">線上客服</a>協助，確保您在購買與使用過程中得到全面支持。</p>
           </div>
         </div>
         <div class="" style="border-top: 1px solid #000; border-bottom: 12px solid #000; height: 24px;"></div>
