--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>關於我們︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-cf4b681e.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-d33c84f6.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-eacc83a1.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-0daa3db6.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -131,7 +131,7 @@
             <p class="">我們提供多款3D立體投影陪伴機器人，涵蓋知識型、娛樂型、生活型和情感型等不同類別，以滿足您的各種需求。每款產品都經過精心設計，具備高度智能化、多功能和人性化操作等特點，讓您在日常生活中獲得更便利的陪伴體驗。</p>
           </div>
           <div class="col-12 col-lg-4 mb-24 mb-lg-80">
-            <p class="">此外，我們還提供完善的售後服務，包括<span class="d-inline-block position-relative text-label text-mark px-8">產品保固</span>、<a href="#" class="">技術支援</a>及<a href="#" class="">線上客服</a>協助，確保您在購買與使用過程中得到全面支持。</p>
+            <p class="">此外，我們還提供完善的售後服務，包括<a href="#" class="link-mark px-8">產品保固</a>、<a href="#" class="link-mark px-8">技術支援</a>及<a href="#" class="link-mark px-8">線上客服</a>協助，確保您在購買與使用過程中得到全面支持。</p>
           </div>
         </div>
         <div class="" style="border-top: 1px solid #000; border-bottom: 12px solid #000; height: 24px;"></div>
