--- a/about.html
+++ b/about.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>關於我們︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-eacc83a1.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-0daa3db6.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-120b7a25.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-9a4cc7f8.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -29,7 +29,7 @@
               <a class="nav-link text-white text-center" href="about.html">關於我們</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">最新消息</a>
+              <a class="nav-link text-white text-center" href="newslist.html">最新消息</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="#">FAQ</a>
@@ -166,7 +166,7 @@
         <a class="d-block ff-shrikhand fs-32 text-black font-italic p-0" href="index.html">ALPHABOX+</a>
         <span class="fw-bold d-none d-lg-block">Copyright © 2023 Hexschool.</span>
       </div>
-      <div class="col-12 col-lg-2 mb-8 mb-lg-0">
+      <div class="col-12 col-lg-2 mb-8 mb-lg-0 text-lg-center">
         <img src="/2023week8/assets/emergency_b-28ccaa1b.svg" alt="emergency_b">
       </div>
       <div class="col-12 col-lg-5 text-end align-self-center">
