--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gulideline︱AI 虛擬陪伴</title>
+    <title>最新消息︱AI 虛擬陪伴</title>
     <script type="module" crossorigin src="/2023week8/assets/main-120b7a25.js"></script>
     <link rel="stylesheet" href="/2023week8/assets/main-9a4cc7f8.css">
   </head>
@@ -68,63 +68,46 @@
   </nav>
 </div>
 
-    <div class="container mt-32 mb-64">
-      <h3>Typography</h3>
-      <hr>
-      <p class="fs-96 ff-noto-sans fw-bolder">Heading 96px Black</p>
-      <p class="fs-64 ff-noto-sans fw-bolder">Heading 64px Black</p>
-      <p class="fs-48 ff-noto-sans fw-bolder">Heading 48px Black</p>
-      <p class="fs-48 ff-noto-sans fw-bold">Heading 48px Bold</p>
-      <p class="fs-32 ff-noto-sans fw-bold">Heading 32px Bold</p>
-      <p class="fs-20 ff-noto-sans fw-bold">Body 20px Bold</p>
-      <p class="fs-32 ff-noto-sans fw-medium">Heading 20px Medium</p>
-      <p class="fs-16 ff-noto-sans fw-bold">Body 16px Bold</p>
-      <p class="fs-16 ff-noto-sans fw-medium">Body 16px Medium</p>
-      <hr>
-      <p class="fs-40 ff-shrikhand fst-italic text-primary">Shrikhand</p>
-      <p class="fs-64 ff-shrikhand fst-italic">Heading 64px</p>
-      <p class="fs-32 ff-shrikhand fst-italic">Heading 32px</p>
-    </div>
-    <div class="container my-24">
-      <h3>Component</h3>
-    </div>
-    <div class="bg-dark py-48">
+    <!-- news start -->
+    <div class="pt-80" style="background: radial-gradient(50% 50.00% at 50% 50.00%, #28085C 0%, #000 100%);">
       <div class="container">
-        <h3 class="text-white my-24">
-          Navbar
-        </h3>
-        <hr class="border border-1 border-white">
-      </div>
-    </div>
-    <div class="container mb-60">
-      <div class="row">
-        <div class="col">
-          <ul class="list-unstyled">
-            <li class="py-12">123</li>
-            <li class="py-12">456</li>
-            <li class="py-12">789</li>
-          </ul>
+        <h2 class="fs-40 letter-spacing-40 fs-md-48 letter-spacing-md-48 text-white fw-bold text-start text-lg-center mt-60 mt-lg-160 mb-60 mb-lg-60">最新消息</h2>
+        <div class="row mb-80 mb-lg-120">
+          <div class="col-12 col-lg-4">
+            <div class="d-flex text-white fw-medium align-items-center mb-8">
+              <img src="/2023week8/assets/arrow_insert-e51eada6.svg" alt="">
+              返回
+            </div>
+            <div class="mb-40 mb-lg-0">
+              <img src="/2023week8/assets/news_in-087fad10.png" alt="news">
+            </div>
+          </div>
+          <div class="col-12 col-lg-8 text-white ">
+            <div class="broder-1 border-top border-bottom border-white px-16 py-24 py-lg-60">
+              <div class="d-flex align-itmes-center fw-medium mb-8"><img src="/2023week8/assets/emergency-28dd8835.svg" class="me-16 pt-4"  alt="mergency"><p class="fw-light-350 fs-16 letter-spacing-16">2023.06.30</p></div>
+              <h3 class="mb-12  fw-medium fs-20">產品升級公告</h3>
+              <p class="fw-light mb-12">親愛的客戶們：</p>
+              <p class="fw-light mb-12">我們榮幸地向您宣布，經過不懈的努力與研發，ALPHABOX+ 已成功完成最新一代的升級！這次的升級將為您帶來更高的投影解析度、更精準的語音辨識技術，以及更豐富的情感識別功能。我們致力於為您打造最佳的陪伴機器人，讓科技更貼近您的生活。</p>
+              <p class="fw-light mb-12">在這次升級中，我們提升了投影解析度，讓影像更加清晰細緻，呈現出更真實的視覺效果。您將能夠更加享受在家中觀看高清影片或欣賞美景的樂趣。同時，我們優化了語音辨識技術，使機器人能更迅速且準確地識別您的聲音指令，提高互動體驗。</p>
+              <p class="fw-light mb-12">此外，我們增加了情感識別功能，使得機器人能更好地理解您的情緒，並根據您的需求提供適當的陪伴與支持。無論您需要傾聽、建議還是安慰，ALPHABOX+ 都將成為您身邊的貼心夥伴。</p>
+              <p class="fw-light mb-12">在未來的日子裡，我們將繼續投入研發，並積極採納用戶意見，以不斷完善產品功能並提高使用體驗。同時，我們承諾會為您提供優質的售後服務，確保您在購買與使用過程中得到全面支持。</p>
+              <p class="fw-light mb-12">再次感謝您對我們的信任與支持，讓我們攜手共創更美好的未來！若您對升級版3D立體投影陪伴機器人有任何疑問或建議，請隨時與我們的客服團隊聯繫，我們將竭誠為您解答。</p>
+              <p class="fw-light mb-12">敬祝 興旺發達！</p>
+              <p class="fw-light mb-12">ALPHABOX+ 團隊敬上 </p>
+            </div>
+            <div class="d-flex justify-content-between pt-24">
+              <div class="w-50">
+                <a href="#"><img src="/2023week8/assets/line_start_arrow_notch_w-c4f32d44.svg" alt="arrow"><p class="d-none d-lg-block text-whit fs-14 fw-medium letter-spacing-14">限時優惠活動</p><p class="d-lg-none text-whit fs-14 fw-medium">上一則</p></a>
+              </div>
+              <div class="w-50 text-end">
+                <a href="#"><img src="/2023week8/assets/line_end_arrow_notch_g-fdfeab61.svg" alt="arrow"></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-
-    <div class="container text-white">
-      <div class="bg-gradient-x mb-30" style="height: 80px;">
-        bg-gradient-x
-      </div>
-      <div class="bg-gradient-y mb-30" style="height: 80px;">
-        bg-gradient-y
-      </div>
-      <div class="bg-gradient-c mb-30" style="height: 800px;">
-        bg-gradient-c
-      </div>
-      <!-- <div class="bg-radial-gradient mb-30" style="height: 300px;">
-        bg-radial-gradient
-      </div> -->
-      <div class="mb-30" style="height: 800px; background-image: radial-gradient(50% 50.00% at 50% 50.00%, #28085C 0%, #000 100%);">
-        bg-color
-      </div>
-    </div>
+    <!-- news end -->
 
     <footer class="py-40 py-lg-48 bg-white">
   <div class="container">
