--- a/sign-up.html
+++ b/sign-up.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gulideline︱AI 虛擬陪伴</title>
+    <title>登入︱AI 虛擬陪伴</title>
     <script type="module" crossorigin src="/2023week8/assets/main-120b7a25.js"></script>
     <link rel="stylesheet" href="/2023week8/assets/main-9a4cc7f8.css">
   </head>
@@ -68,61 +68,9 @@
   </nav>
 </div>
 
-    <div class="container mt-32 mb-64">
-      <h3>Typography</h3>
-      <hr>
-      <p class="fs-96 ff-noto-sans fw-bolder">Heading 96px Black</p>
-      <p class="fs-64 ff-noto-sans fw-bolder">Heading 64px Black</p>
-      <p class="fs-48 ff-noto-sans fw-bolder">Heading 48px Black</p>
-      <p class="fs-48 ff-noto-sans fw-bold">Heading 48px Bold</p>
-      <p class="fs-32 ff-noto-sans fw-bold">Heading 32px Bold</p>
-      <p class="fs-20 ff-noto-sans fw-bold">Body 20px Bold</p>
-      <p class="fs-32 ff-noto-sans fw-medium">Heading 20px Medium</p>
-      <p class="fs-16 ff-noto-sans fw-bold">Body 16px Bold</p>
-      <p class="fs-16 ff-noto-sans fw-medium">Body 16px Medium</p>
-      <hr>
-      <p class="fs-40 ff-shrikhand fst-italic text-primary">Shrikhand</p>
-      <p class="fs-64 ff-shrikhand fst-italic">Heading 64px</p>
-      <p class="fs-32 ff-shrikhand fst-italic">Heading 32px</p>
-    </div>
-    <div class="container my-24">
-      <h3>Component</h3>
-    </div>
-    <div class="bg-dark py-48">
+    <div class="pt-80" style="background: radial-gradient(50% 50.00% at 50% 50.00%, #28085C 0%, #000 100%);">
       <div class="container">
-        <h3 class="text-white my-24">
-          Navbar
-        </h3>
-        <hr class="border border-1 border-white">
-      </div>
-    </div>
-    <div class="container mb-60">
-      <div class="row">
-        <div class="col">
-          <ul class="list-unstyled">
-            <li class="py-12">123</li>
-            <li class="py-12">456</li>
-            <li class="py-12">789</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-
-    <div class="container text-white">
-      <div class="bg-gradient-x mb-30" style="height: 80px;">
-        bg-gradient-x
-      </div>
-      <div class="bg-gradient-y mb-30" style="height: 80px;">
-        bg-gradient-y
-      </div>
-      <div class="bg-gradient-c mb-30" style="height: 800px;">
-        bg-gradient-c
-      </div>
-      <!-- <div class="bg-radial-gradient mb-30" style="height: 300px;">
-        bg-radial-gradient
-      </div> -->
-      <div class="mb-30" style="height: 800px; background-image: radial-gradient(50% 50.00% at 50% 50.00%, #28085C 0%, #000 100%);">
-        bg-color
+        
       </div>
     </div>
 
