updat faq, contact us, sign-up, sign-in pages...

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -11,8 +11,95 @@
 
     <!-- faq start -->
     <div class="pt-80 bg-primary-4">
-      <div class="container">
-
+      <div class="container pb-80 pb-lg-120">
+        <div class="mt-60 mt-lg-64 pb-40 pb-lg-64 border-dotted">
+          <h2 class="fs-40 fs-md-48 letter-spacing-40 letter-spacing-md-48 fw-bold">FAQ</h2>
+        </div>
+        <div class="row justify-content-between pt-24 pt-lg-40">
+          <div class="col-lg-4">
+            <div class="list-group border-dotted">
+              <a href="#" class="list-group-item list-group-item-action p-0 mb-16 active border-bottom-1" aria-current="true">ALPHABOX+ 使用問題</a>
+              <a href="#" class="list-group-item list-group-item-action p-0 mb-16">訂購與運送</a>
+              <a href="#" class="list-group-item list-group-item-action p-0 pb-24">產品保養與維修</a>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item border-dotted pb-32 pb-lg-40 pt-32 pt-lg-0">
+                <h2 class="accordion-header">
+                  <button class="accordion-button fw-medium text-primary-3 py-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    ALPHABOX+ 的使用方式是什麼？
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    ALPHABOX+ 需要什麼樣的環境來使用？
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    ALPHABOX+ 支援哪些語言？
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                    ALPHABOX+ 的軟體更新方式為何？
+                  </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                    購買 ALPHABOX+ 後的售後服務如何？
+                  </button>
+                </h2>
+                <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+                    ALPHABOX+ 與其他智能家居設備的相容性如何？
+                  </button>
+                </h2>
+                <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- faq end -->
