--- a/pages/index.html
+++ b/pages/index.html
@@ -328,12 +328,12 @@
             </div>
             <form action="">
               <div class="form-floating mb-16">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput" class="fs-md-20 fw-bold">EMAIL</label>
+                <input type="email" class="form-control" id="emain" placeholder="name@example.com">
+                <label for="emain" class="fs-md-20 fw-bold">EMAIL</label>
               </div>
               <div class="form-floating mb-16">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                <label for="floatingTextarea2" class="fs-md-20 fw-bold">COMMENTS</label>
+                <textarea class="form-control" placeholder="Leave a comment here" id="comments" style="height: 100px"></textarea>
+                <label for="comments" class="fs-md-20 fw-bold">COMMENTS</label>
               </div>
               <div class="row d-flex justify-content-end">
                 <div class="col-12 col-md-7">
