--- a/pages/sign-in.html
+++ b/pages/sign-in.html
@@ -15,12 +15,27 @@
           <div class="col-12 col-lg-4">
             <h2 class="fs-40 letter-spacing-40 fs-md-48 letter-spacing-md-48 text-white fw-bolder mt-lg-100">登入</h2>
           </div>
-          <div class="col-12 col-lg-8">
-            <div class="w-50 text-center">
-              <div class="alphaboxCircle mx-auto mb-24"><img src="/assets/images/icons/circle.svg"></div>
-              <p class="text-white fs-32 ff-shrikhand mb-32">ALPHABOX+</p>
-              <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-16"><img src="/assets/images/icons/apple_icon.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="apple">Continue with Apple</button>
-              <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-24"><img src="/assets/images/icons/google_icon.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="google">Continue with Google</button>
+          <div class="col-12 col-lg-8 mb-80 mb-lg-96">
+            <div class="row">
+              <div class="col-12 col-xl-6 text-center">
+                <div class="alphaboxCircle mx-auto mb-24"><img src="/assets/images/icons/circle.svg"></div>
+                <p class="text-white fs-32 ff-shrikhand mb-32">ALPHABOX+</p>
+                <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-16"><img src="/assets/images/icons/apple_icon.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="apple">Continue with Apple</button>
+                <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-24"><img src="/assets/images/icons/google_icon.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="google">Continue with Google</button>
+                <div class="d-flex justify-content-between align-items-center gap-4 mb-md-24"><div class="border-1 border-top border-white" style="width: 100% ;height: 8px;"></div><span class="text-white pb-12">or</span><div class="border-1 border-top border-white" style="width: 100% ;height: 8px;"></div></div>
+                <form action="">
+                  <div class="form-floating mb-16">
+                    <input type="email" class="form-control" id="email" placeholder="EMAIL">
+                    <label for="email" class="fs-md-20 fw-bold">EMAIL</label>
+                  </div>
+                  <div class="form-floating mb-24">
+                    <input type="password" class="form-control" id="password" placeholder="密碼">
+                    <label for="password" class="fs-md-20 fw-bold">密碼</label>
+                  </div>
+                  <button class="btn btn-primary w-100 rounded-1 d-flex justify-content-center align-items-center py-8"><img class="rounded-1 me-8" src="/assets/images/icons/point_scan.png" style="width: 16px; height: 16px; background-color: transparent; color: #fff;">立即送出</button>
+                </form>
+                <div class="text-end"><a href="#" class="link-white text-decoration-underline">忘記密碼</a></div>
+              </div>
             </div>
           </div>
         </div>
