--- a/pages/sign-up.html
+++ b/pages/sign-up.html
@@ -10,8 +10,107 @@
     <%- include('./layout/header'); -%>
 
     <div class="pt-80" style="background: radial-gradient(50% 50.00% at 50% 50.00%, #28085C 0%, #000 100%);">
-      <div class="container">
-        
+      <div class="container pt-60">
+        <div class="row">
+          <div class="col-12 col-lg-4">
+            <h2 class="fs-40 letter-spacing-40 fs-md-48 letter-spacing-md-48 text-white fw-bolder mt-lg-100">註冊</h2>
+          </div>
+          <div class="col-12 col-lg-8 mb-80 mb-lg-96">
+            <div class="row">
+              <div class="col-12 col-xl-6 text-center">
+                <div class="alphaboxCircle mx-auto mb-24"><img src="/assets/images/icons/circle.svg"></div>
+                <p class="text-white fs-32 ff-shrikhand mb-32">ALPHABOX+</p>
+                <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-16"><img src="/assets/images/icons/apple_icon.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="apple">Continue with Apple</button>
+                <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-24"><img src="/assets/images/icons/google_icon.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="google">Continue with Google</button>
+                <div class="d-flex justify-content-between align-items-center gap-4 mb-md-24"><div class="border-1 border-top border-white" style="width: 100% ;height: 8px;"></div><span class="text-white pb-12">or</span><div class="border-1 border-top border-white" style="width: 100% ;height: 8px;"></div></div>
+                <form action="">
+                  <div class="form-floating mb-16">
+                    <input type="text" class="form-control" id="name" placeholder="姓名">
+                    <label for="name" class="fs-md-20 fw-bold">姓名</label>
+                  </div>
+                  <div class="form-floating mb-16">
+                    <input type="email" class="form-control" id="email" placeholder="EMAIL">
+                    <label for="email" class="fs-md-20 fw-bold">EMAIL</label>
+                  </div>
+                  <div class="form-floating mb-8">
+                    <input type="password" class="form-control" id="password" placeholder="密碼">
+                    <label for="password" class="fs-md-20 fw-bold">密碼</label>
+                  </div>
+                  <div class="text-white text-start mb-24">
+                    <input class="form-check-input btn-outline-light bg-black" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      我已仔細閱讀<a href="#" class="link-white text-decoration-underline" data-bs-toggle="modal" data-bs-target="#termsModal">相關條例</a>
+                    </label>
+                  </div>
+                  <button class="btn btn-primary w-100 rounded-1 d-flex justify-content-center align-items-center py-8"><img class="rounded-1 me-8" src="/assets/images/icons/point_scan.png" style="width: 16px; height: 16px; background-color: transparent; color: #fff;">立即送出</button>
+                </form>
+                <div class="text-end text-white">已有帳號嗎？前往<a href="sign-in.html" class="link-white text-decoration-underline">登入</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Scrollable modal -->
+    <div class="modal fade" id="termsModal" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-scrollable position-relative pt-12 pe-12">
+        <button type="button" class="position-absolute btn-close btn-terms " data-bs-dismiss="modal" aria-label="Close"></button>
+        <!-- <button type="button" class="btn-close rounded-5 bg-white p-8" style="position: absolute; top: -2px; right: -2px; z-index: 5;" data-bs-dismiss="modal" aria-label="Close"></button> -->
+        <div class="modal-content pt-40">
+          <div class="modal-body px-16 pt-0">
+            <p class="mb-16">ALPHABOX+ 註冊條例</p>
+            <p class="mb-16">感謝您選擇使用ALPHABOX+品牌的Felix 3D立體投影機器人！為了確保您在使用我們的產品和服務時能夠享受到愉快的體驗，請在註冊帳號前，仔細閱讀以下註冊帳號使用規範條例。</p>
+            <p class="mb-16">第1條：帳號註冊</p>
+            <ol class="px-24">
+              <li class="mb-16">註冊帳號時，請確保提供真實、準確、完整的個人資料，如發現虛假資料，我們有權隨時終止您的帳號。</li>
+              <li class="mb-16">用戶需設定一組安全的帳號密碼，並妥善保管。如因用戶原因導致帳號密碼遭盜用，我們將不承擔任何責任。</li>
+              <li class="mb-16">每位用戶僅限註冊一個帳號，禁止註冊多個帳號。如經查證有用戶註冊多個帳號的行為，我們有權對其帳號進行封禁處理。</li>
+            </ol>
+            <p class="mb-16">第2條：帳號使用</p>
+            <ol class="px-24">
+              <li class="mb-16">用戶不得在帳號中發布任何違法、侵權、色情、暴力、恐怖或種族歧視等違反社會公序良俗的內容。如有違反，我們有權對相關帳號進行封禁處理。</li>
+              <li class="mb-16">用戶不得利用帳號進行任何形式的商業活動、廣告宣傳，或未經授權的盈利行為。如有違反，我們有權對相關帳號進行封禁處理。</li>
+              <li class="mb-16">用戶應尊重他人的知識產權，不得在帳號中發布他人的著作權、專利權、商標權等知識產權受保護的內容。如有侵權行為，我們有權對相關帳號進行封禁處理。</li>
+            </ol>
+            <p class="mb-16">第3條：帳號安全</p>
+            <ol class="px-24">
+              <li class="mb-16">用戶應妥善保管自己的帳號密碼，不得將帳號密碼告知他人。如因用戶原因導致帳號密碼遭他人盜用，我們將不承擔任何責任。</li>
+              <li class="mb-16">如用戶發現自己的帳號遭他人盜用或存在安全隱患，應立即通知我們，以便我們採取相應措施保護您的帳號安全。</li>
+            </ol>
+            <p class="mb-16">第4條：帳號終止與刪除</p>
+            <ol class="px-24">
+              <li class="mb-16">如用戶自願終止帳號，可在帳號設置中申請注銷。帳號注銷後，用戶將無法再登錄該帳號，並且帳號內所有資料將被永久刪除。</li>
+              <li class="mb-16">如用戶違反本使用規範條例，我們有權對其帳號進行暫時或永久封禁處理。封禁期間，用戶將無法登錄帳號，並可能導致部分或全部資料丟失。</li>
+              <li class="mb-16">如用戶在一定期限內未登錄帳號，我們將保留刪除該帳號的權利，以確保資源的合理分配。</li>
+            </ol>
+            <p class="mb-16">第5條：個人資料保護</p>
+            <ol class="px-24">
+              <li class="mb-16">我們將尊重並保護用戶的隱私，並依法保護用戶的個人資料。未經用戶同意，我們不會向任何第三方提供、公開或共享用戶的個人資料，除非適用法律規定或政府要求。</li>
+              <li class="mb-16">我們將采取合理的技術和組織措施保護用戶的個人資料安全，防止未經授權的訪問、揭露、使用或修改。</li>
+            </ol>
+            <p class="mb-16">第6條：修改與更新</p>
+            <ol class="px-24">
+              <li class="mb-16">我們保留隨時修改本使用規範條例的權利。如有修改，我們將在相應平台上公告修改後的條例，並自公告之日起生效。</li>
+              <li class="mb-16">如用戶不同意修改後的條例，應立即停止使用帳號。繼續使用帳號將被視為接受修改後的條例。</li>
+            </ol>
+            <p class="mb-16">第7條：免責聲明</p>
+            <ol class="px-24">
+              <li class="mb-16">用戶應自行承擔使用帳號的風險。我們不保證服務不受干擾，也不保證服務的及時性、安全性或準確性。因網絡環境、設備故障或其他不可抗力因素而導致的服務中斷、數據丟失等問題，我們將不承擔任何責任。</li>
+              <li class="mb-16">我們對於用戶因使用帳號而遭受的任何間接、意外、特殊或衍生的損害（包括但不限於利潤損失、數據損失、業務中斷或其他財產損失），均不承擔賠償責任。</li>
+            </ol>
+            <p class="mb-16">第8條：免責聲明</p>
+            <ol class="px-24">
+              <li class="mb-16">本使用規範條例的訂立、執行、解釋及爭議解決均適用中華民國法律。</li>
+              <li class="mb-16">如用戶與我們因本使用規範條例而發生爭議，應先嘗試友好協商解決。協商不成的，用戶同意將爭議提交中華民國有管轄權的法院審理。</li>
+            </ol>
+            <p class="mb-16">再次感謝您選擇使用ALPHABOX+品牌的Felix 3D立體投影機器人，並遵守以上註冊帳號使用規範條例。我們期待為您提供優質的產品和服務，祝您使用愉快！ </p>
+          </div>
+          <!-- <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div> -->
+        </div>
       </div>
     </div>
 
