--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>首頁︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-120b7a25.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-9a4cc7f8.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-0326a040.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-c31d8c09.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse navbar-bg" id="navContent">
           <ul class="navbar-nav mx-lg-auto me-auto mb-8 mb-lg-0 gap-8 pt-16 pt-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
+              <a class="nav-link text-white text-center" aria-current="page" href="">產品</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="about.html">關於我們</a>
@@ -32,19 +32,19 @@
               <a class="nav-link text-white text-center" href="newslist.html">最新消息</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">FAQ</a>
+              <a class="nav-link text-white text-center" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">聯絡我們</a>
+              <a class="nav-link text-white text-center" href="contact.html">聯絡我們</a>
             </li>
           </ul>
 
           <ul class="navbar-nav gap-8 pb-32 pb-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">註冊</a>
+              <a class="nav-link text-white text-center" href="sign-up.html">註冊</a>
             </li>
             <li class="nav-item me-lg-16">
-              <a class="nav-link text-white text-center" href="#">登入</a>
+              <a class="nav-link text-white text-center" href="sign-in.html">登入</a>
             </li>
             <li class="nav-item d-flex justify-content-center">
               <a class="nav-link btn rounded-1 text-black text-center bg-white py-8 px-12" href="#">
@@ -387,12 +387,12 @@
             </div>
             <form action="">
               <div class="form-floating mb-16">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput" class="fs-md-20 fw-bold">EMAIL</label>
+                <input type="email" class="form-control" id="emain" placeholder="name@example.com">
+                <label for="emain" class="fs-md-20 fw-bold">EMAIL</label>
               </div>
               <div class="form-floating mb-16">
-                <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
-                <label for="floatingTextarea2" class="fs-md-20 fw-bold">COMMENTS</label>
+                <textarea class="form-control" placeholder="Leave a comment here" id="comments" style="height: 100px"></textarea>
+                <label for="comments" class="fs-md-20 fw-bold">COMMENTS</label>
               </div>
               <div class="row d-flex justify-content-end">
                 <div class="col-12 col-md-7">
@@ -489,8 +489,8 @@
       <div class="col-12 col-lg-5 text-end align-self-center">
         <ul class="list-unstyled d-flex flex-column justify-content-end flex-lg-row align-items-start ">
           <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="about.html">關於我們</a></li>
-          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">產品資訊</a></li>
-          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">聯絡我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="product.html">產品資訊</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="contact.html">聯絡我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black ps-lg-12" href="#">隱私政策</a></li>
         </ul>
       </div>
