--- a/faq.html
+++ b/faq.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FAQ︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-120b7a25.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-9a4cc7f8.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-0326a040.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-c31d8c09.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse navbar-bg" id="navContent">
           <ul class="navbar-nav mx-lg-auto me-auto mb-8 mb-lg-0 gap-8 pt-16 pt-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
+              <a class="nav-link text-white text-center" aria-current="page" href="">產品</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="about.html">關於我們</a>
@@ -32,19 +32,19 @@
               <a class="nav-link text-white text-center" href="newslist.html">最新消息</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">FAQ</a>
+              <a class="nav-link text-white text-center" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">聯絡我們</a>
+              <a class="nav-link text-white text-center" href="contact.html">聯絡我們</a>
             </li>
           </ul>
 
           <ul class="navbar-nav gap-8 pb-32 pb-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">註冊</a>
+              <a class="nav-link text-white text-center" href="sign-up.html">註冊</a>
             </li>
             <li class="nav-item me-lg-16">
-              <a class="nav-link text-white text-center" href="#">登入</a>
+              <a class="nav-link text-white text-center" href="sign-in.html">登入</a>
             </li>
             <li class="nav-item d-flex justify-content-center">
               <a class="nav-link btn rounded-1 text-black text-center bg-white py-8 px-12" href="#">
@@ -70,8 +70,95 @@
 
     <!-- faq start -->
     <div class="pt-80 bg-primary-4">
-      <div class="container">
-
+      <div class="container pb-80 pb-lg-120">
+        <div class="mt-60 mt-lg-64 pb-40 pb-lg-64 border-dotted">
+          <h2 class="fs-40 fs-md-48 letter-spacing-40 letter-spacing-md-48 fw-bold">FAQ</h2>
+        </div>
+        <div class="row justify-content-between pt-24 pt-lg-40">
+          <div class="col-lg-4">
+            <div class="list-group border-dotted">
+              <a href="#" class="list-group-item list-group-item-action p-0 mb-16 active border-bottom-1" aria-current="true">ALPHABOX+ 使用問題</a>
+              <a href="#" class="list-group-item list-group-item-action p-0 mb-16">訂購與運送</a>
+              <a href="#" class="list-group-item list-group-item-action p-0 pb-24">產品保養與維修</a>
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item border-dotted pb-32 pb-lg-40 pt-32 pt-lg-0">
+                <h2 class="accordion-header">
+                  <button class="accordion-button fw-medium text-primary-3 py-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    ALPHABOX+ 的使用方式是什麼？
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    ALPHABOX+ 需要什麼樣的環境來使用？
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    ALPHABOX+ 支援哪些語言？
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                    ALPHABOX+ 的軟體更新方式為何？
+                  </button>
+                </h2>
+                <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+                    購買 ALPHABOX+ 後的售後服務如何？
+                  </button>
+                </h2>
+                <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item border-dotted py-32 py-lg-40">
+                <h2 class="accordion-header">
+                  <button class="accordion-button collapsed fw-medium text-primary-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+                    ALPHABOX+ 與其他智能家居設備的相容性如何？
+                  </button>
+                </h2>
+                <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                  <div class="accordion-body pt-16">
+                    <p class="text-primary-3">首先請確保機器人已安裝並連接至Wi-Fi，然後使用專屬的應用程式進行設定。隨後即可透過語音指令或應用程式與機器人進行互動。</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- faq end -->
@@ -89,8 +176,8 @@
       <div class="col-12 col-lg-5 text-end align-self-center">
         <ul class="list-unstyled d-flex flex-column justify-content-end flex-lg-row align-items-start ">
           <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="about.html">關於我們</a></li>
-          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">產品資訊</a></li>
-          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">聯絡我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="product.html">產品資訊</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="contact.html">聯絡我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black ps-lg-12" href="#">隱私政策</a></li>
         </ul>
       </div>
