--- a/sign-in.html
+++ b/sign-in.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>登入︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-120b7a25.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-9a4cc7f8.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-0326a040.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-c31d8c09.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse navbar-bg" id="navContent">
           <ul class="navbar-nav mx-lg-auto me-auto mb-8 mb-lg-0 gap-8 pt-16 pt-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" aria-current="page" href="#">產品</a>
+              <a class="nav-link text-white text-center" aria-current="page" href="">產品</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="about.html">關於我們</a>
@@ -32,19 +32,19 @@
               <a class="nav-link text-white text-center" href="newslist.html">最新消息</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">FAQ</a>
+              <a class="nav-link text-white text-center" href="faq.html">FAQ</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">聯絡我們</a>
+              <a class="nav-link text-white text-center" href="contact.html">聯絡我們</a>
             </li>
           </ul>
 
           <ul class="navbar-nav gap-8 pb-32 pb-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" href="#">註冊</a>
+              <a class="nav-link text-white text-center" href="sign-up.html">註冊</a>
             </li>
             <li class="nav-item me-lg-16">
-              <a class="nav-link text-white text-center" href="#">登入</a>
+              <a class="nav-link text-white text-center" href="sign-in.html">登入</a>
             </li>
             <li class="nav-item d-flex justify-content-center">
               <a class="nav-link btn rounded-1 text-black text-center bg-white py-8 px-12" href="#">
@@ -74,12 +74,27 @@
           <div class="col-12 col-lg-4">
             <h2 class="fs-40 letter-spacing-40 fs-md-48 letter-spacing-md-48 text-white fw-bolder mt-lg-100">登入</h2>
           </div>
-          <div class="col-12 col-lg-8">
-            <div class="w-50 text-center">
-              <div class="alphaboxCircle mx-auto mb-24"><img src="/2023week8/assets/circle-4ce3cb0d.svg"></div>
-              <p class="text-white fs-32 ff-shrikhand mb-32">ALPHABOX+</p>
-              <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-16"><img src="/2023week8/assets/apple_icon-3b6da83c.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="apple">Continue with Apple</button>
-              <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-24"><img src="/2023week8/assets/google_icon-c58a297d.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="google">Continue with Google</button>
+          <div class="col-12 col-lg-8 mb-80 mb-lg-96">
+            <div class="row">
+              <div class="col-12 col-xl-6 text-center">
+                <div class="alphaboxCircle mx-auto mb-24"><img src="/2023week8/assets/circle-4ce3cb0d.svg"></div>
+                <p class="text-white fs-32 ff-shrikhand mb-32">ALPHABOX+</p>
+                <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-16"><img src="/2023week8/assets/apple_icon-3b6da83c.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="apple">Continue with Apple</button>
+                <button type="button" class="d-flex justify-content-center align-items-center btn btn-outline-light rounded-5 w-100 py-8 mb-24"><img src="/2023week8/assets/google_icon-c58a297d.png" style="width: 20px; height: 20px; margin-right: 10px;" alt="google">Continue with Google</button>
+                <div class="d-flex justify-content-between align-items-center gap-4 mb-md-24"><div class="border-1 border-top border-white" style="width: 100% ;height: 8px;"></div><span class="text-white pb-12">or</span><div class="border-1 border-top border-white" style="width: 100% ;height: 8px;"></div></div>
+                <form action="">
+                  <div class="form-floating mb-16">
+                    <input type="email" class="form-control" id="email" placeholder="EMAIL">
+                    <label for="email" class="fs-md-20 fw-bold">EMAIL</label>
+                  </div>
+                  <div class="form-floating mb-24">
+                    <input type="password" class="form-control" id="password" placeholder="密碼">
+                    <label for="password" class="fs-md-20 fw-bold">密碼</label>
+                  </div>
+                  <button class="btn btn-primary w-100 rounded-1 d-flex justify-content-center align-items-center py-8"><img class="rounded-1 me-8" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABMAAAASCAYAAAC5DOVpAAAACXBIWXMAAAsTAAALEwEAmpwYAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAABfSURBVHgB7ZPdDUARDIWbO8Ed0QhG6EZGsJINiqhEPDiJ8CB8iQf0Nz0lAogIS4GR7UcLuSTYoSQ5/Ol4lYbLd+RQddTC+me6dzvyQQPoKwk0i7bpNLOHbZ7LW/S9wSKclHqNgnkweAAAAABJRU5ErkJggg==" style="width: 16px; height: 16px; background-color: transparent; color: #fff;">立即送出</button>
+                </form>
+                <div class="text-end"><a href="#" class="link-white text-decoration-underline">忘記密碼</a></div>
+              </div>
             </div>
           </div>
         </div>
@@ -99,8 +114,8 @@
       <div class="col-12 col-lg-5 text-end align-self-center">
         <ul class="list-unstyled d-flex flex-column justify-content-end flex-lg-row align-items-start ">
           <li class="mb-8 mb-lg-0"><a class="text-black pe-lg-12" href="about.html">關於我們</a></li>
-          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">產品資訊</a></li>
-          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="#">聯絡我們</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="product.html">產品資訊</a></li>
+          <li class="mb-8 mb-lg-0"><a class="text-black px-lg-12" href="contact.html">聯絡我們</a></li>
           <li class="mb-8 mb-lg-0"><a class="text-black ps-lg-12" href="#">隱私政策</a></li>
         </ul>
       </div>
