--- a/_gl.html
+++ b/_gl.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gulideline︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-9855c569.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-270f5a63.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-24515535.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-c6e620c7.css">
   </head>
-  <body>
+  <body style="background-color: #000;">
     <div class="position-fixed w-100 z-3">
   <div class="navbar-border position-absolute bg-white start-0 end-0 bottom-0"></div>
   <nav class="navbar navbar-expand-lg py-12 py-md-20 bg-primary" data-bs-theme="dark">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse navbar-bg" id="navContent">
           <ul class="navbar-nav mx-lg-auto me-auto mb-8 mb-lg-0 gap-8 pt-16 pt-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" aria-current="page" href="">產品</a>
+              <a class="nav-link text-white text-center" aria-current="page" href="product.html">產品</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="about.html">關於我們</a>
@@ -68,7 +68,13 @@
   </nav>
 </div>
 
-    <div class="container mt-32 mb-64">
+    <div class="container mt-32 mb-64 pt-80">
+
+     <div class="row">
+      <div class="col-lg-3 border-end border-danger border-lg-end-0" style="width: 300px; height: 200px;">
+        123
+      </div>
+     </div>
       <h3>Typography</h3>
       <hr>
       <p class="fs-96 ff-noto-sans fw-bolder">Heading 96px Black</p>
