--- a/newslist.html
+++ b/newslist.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>最新消息︱AI 虛擬陪伴</title>
-    <script type="module" crossorigin src="/2023week8/assets/main-9855c569.js"></script>
-    <link rel="stylesheet" href="/2023week8/assets/main-270f5a63.css">
+    <script type="module" crossorigin src="/2023week8/assets/main-24515535.js"></script>
+    <link rel="stylesheet" href="/2023week8/assets/main-c6e620c7.css">
   </head>
   <body>
     <div class="position-fixed w-100 z-3">
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse navbar-bg" id="navContent">
           <ul class="navbar-nav mx-lg-auto me-auto mb-8 mb-lg-0 gap-8 pt-16 pt-lg-0 gap-lg-16">
             <li class="nav-item">
-              <a class="nav-link text-white text-center" aria-current="page" href="">產品</a>
+              <a class="nav-link text-white text-center" aria-current="page" href="product.html">產品</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white text-center" href="about.html">關於我們</a>
